[package]
name = "wasm-tungstenite"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.56"
http = "1.0.0"
httparse = "1.3"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
js-sys = "0.3.67"
futures-channel = "0.3.30"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Event",
    "ErrorEvent",
    "BinaryType",
    "Blob",
]
